Revert "fix colloabate_btn visibility"
This reverts commit 06b324c8ba7486f090ef5ad67fb0bb642ce61cf9.

--- a/themes/mapascoletivos/css/mapascoletivos.css
+++ b/themes/mapascoletivos/css/mapascoletivos.css
@@ -144,19 +144,11 @@ img#claro{
 }
 #map_title {
 	color:#666;
-	margin-left:10px; 
-	margin-top: -5px;
-	font-size: 18px;
+	margin:0;
+	padding: 12px 0 0 10px;
+	font-size: 16px;
 	font-weight: bold;
-	text-transform: capitalize;
-}
-
-#map_user_title{
-	color:#666;
-	padding: 18px 0 0 10px;
 	font-size: 18px;
-	font-weight: bold;
-	text-transform: capitalize;
 }
 
 p#mapeador{
